# software-rasterizer

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeLists.txt  README.md  SoftwareRasteriser.vcxproj  SoftwareRasteriser.vcxproj.filters  SoftwareRasterizer.sln  SoftwareRasterizer.vcxproj  SoftwareRasterizer.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters
inc/: RasterizerDesc.h  SoftwareRasterizer.h
src/: SoftwareRasteriser.cpp  SoftwareRasteriser.hpp  SoftwareRasterizer.cpp  main.cpp
